--- a/README.adoc
+++ b/README.adoc
@@ -250,7 +250,7 @@ Source: link:c_hello_world/[]
 
 But keep in mind the following limitations and difficulties:
 
-* single stage, so still limited to 512 bytes of code + data!
+* single stage, so still limited to 512 bytes of code + data! TODO: it should be easy to solve that with <<bios-disk-load>>, send a pull request :-)
 * use use GCC's `-m` which does not produce "real" 16 bit code, but rather 32-bit code with `0x66` and `0x67` prefixes: https://wiki.osdev.org/X86-64_Instruction_Encoding#Legacy_Prefixes
 * setting up the initial state and the linker script is much harder and error prone than with assembly
 
