--- a/README.adoc
+++ b/README.adoc
@@ -11,13 +11,16 @@
 
 Dozens of minimal operating systems to learn x86 system programming. Tested on Ubuntu 17.10 host and <<test-hardware,real hardware>>. Userland cheat at: https://github.com/cirosantilli/x86-assembly-cheat ARM baremetal setup at: https://github.com/cirosantilli/linux-kernel-module-cheat#baremetal-setup
 
+:logo: logo.jpg
+link:{logo}[image:{logo}[]]
+
 toc::[]
 
 == Getting started
 
 First read this introduction: https://stackoverflow.com/questions/22054578/how-to-run-a-program-without-an-operating-system/32483545#32483545
 
-On Ubuntu:
+Then on Ubuntu:
 
 ....
 ./configure
